--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div id="app">
       <!-- Application will be mounted here -->
     </div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
