feat: visual redesign of stat pools with parchment aesthetic
- Add Google Fonts (Cinzel serif + Caveat handwritten)
- Add parchment color palette to Tailwind config
- Redesign StatPool component with RPG character sheet aesthetic:
  * Parchment gradient background with brown borders
  * Huge handwritten numbers (text-7xl) for pool values
  * Elegant serif labels for stat names
  * 2-column layout for Edge/Current values
- Update Stats component to 3-column responsive grid
- Apply parchment background to entire page
- Fix CSS import in main.ts
- Reduce test timeout to 200ms for faster feedback
- Fix test selector for pool label
- Add npm kill script for vite processes

All 30/30 E2E tests passing
Matches official Numenera character sheet design

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Numenera Character Sheet - Manage your RPG characters" />
     <title>Numenera Character Sheet</title>
+
+    <!-- Google Fonts: Serif for labels, Handwritten for content -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Caveat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body class="bg-gray-50 min-h-screen">
+  <body class="bg-parchment-light min-h-screen">
     <div id="app">
       <!-- Application will be mounted here -->
     </div>
