feat: Add parchment page background with dark mode support
Visual Improvements:

- Added warm parchment gradient background to page body

- Implemented automatic dark mode detection via prefers-color-scheme

- Content container always displays parchment (mode-independent)

Changes:

- index.html: Removed conflicting bg-parchment-light class from body

- CharacterSheet.ts: Removed bg-gray-50 and bg-white classes

- CharacterSheet.ts: Added parchment-container class to inner div

- main.css: Added body background with light/dark mode variants

- main.css: Created parchment-container class for content area

Light Mode:

- Page background: Parchment gradient (#f5e6d3 → #ede1cf)

- Content container: Parchment gradient (same)

Dark Mode:

- Page background: Dark gradient (#1a1a1a → #0a0a0a)

- Content container: Parchment gradient (always)

Result:

- Unified parchment aesthetic in light mode

- Dark page with parchment content in dark mode

- Automatic switching based on system preferences

- No JavaScript required (pure CSS solution)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-parchment-light min-h-screen">
+  <body class="min-h-screen">
     <div id="app">
       <!-- Application will be mounted here -->
     </div>
